# scopus-mcp

./: .gitignore  API_Query_Tool_Data_Fetcher.md  ARCHITECTURE_AND_BUILD.md  LICENSE  MCP_tool_config.json  PROJECT_STRUCTURE.md  README.md  README_CN.md  ScopusAPI_Guide.md  USAGE_EXAMPLES.md  config.json.example  pyproject.toml  server.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml
.trae/documents/: ScopusMCP Implementation Plan (1).md  ScopusMCP Implementation Plan.md
src/scopus_mcp/: cache.py  client.py  config.py  server.py  utils.py
tests/: test_client.py  test_parser.py
