[project]
name = "scopus-mcp"
version = "0.1.8"
description = "A Model Context Protocol server for the Elsevier Scopus API"
readme = "README.md"
authors = [
  {name = "qwe4559999", email = "heyrhao@126.com"},
  {name = "thinktraveller"}
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/qwe4559999/scopus-mcp"
Documentation = "https://github.com/qwe4559999/scopus-mcp/blob/main/README.md"
Repository = "https://github.com/qwe4559999/scopus-mcp"
Issues = "https://github.com/qwe4559999/scopus-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1"
]

[project.scripts]
scopus-mcp = "scopus_mcp.server:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scopus_mcp"]
